--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Futura', sans-serif;
-    background: url('background-texture.png') repeat;
+    background: url('Grid.png') repeat;
     color: #fff;
     display: flex;
     align-items: center;
